--- a/www_data/data/view/project/index.html
+++ b/www_data/data/view/project/index.html
@@ -75,16 +75,26 @@
                                 <div class="required_resources">
                                     <div class="blocks resource_time">
                                         <span>Время</span>
-                                        <div>12312</div>
+                                        <div>есть свободное время</div>
                                     </div>
                                     <div class="blocks resources_mobility">
                                         <span>Мобильность</span>
                                     </div>
                                     <div class="blocks resources_material">
                                         <span>Материальные</span>
+                                        <div>Удаленное рабочее место</div>
+                                        <div>Доступ к сети</div>
                                     </div>
                                     <div class="blocks resources_cash">
                                         <span>Денежные</span>
+                                    </div>
+                                </div>
+                                <div class="people_in_project">
+                                    <div class="left_block_people">
+                                        <span>Руководители проекта:</span>
+                                    </div>
+                                    <div class="rigth_block_people">
+                                        <span>Команда:</span>
                                     </div>
                                 </div>
                         </div>
