--- a/www_data/data/view/project/css/project.css
+++ b/www_data/data/view/project/css/project.css
@@ -120,11 +120,19 @@
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    padding: 5px;
+    padding: 15px;
     font-size: 20px;
 }
 
 
 .people_in_project{
     display: flex;
+}
+
+.left_block_people{
+    flex: 1;
+}
+
+.rigth_block_people{
+    flex: 1;
 }
