--- a/www_data/data/view/project/css/project.css
+++ b/www_data/data/view/project/css/project.css
@@ -120,8 +120,9 @@
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    padding: 15px;
+    padding: 5px;
     font-size: 20px;
+    margin-top: 5px;
 }
 
 
@@ -134,5 +135,40 @@
 }
 
 .rigth_block_people{
+    flex: 1;
+}
+
+#avatar_review{
+    min-width: 70px;
+    min-height: 75px;
+    max-width: 70px;
+    max-height: 75px;
+}
+
+.personal_reviews_managers{
+    margin-bottom: 3%;
+}   
+.personal_reviews_managers div{
+    width: 96%;
+    border-radius: 10px;
+    font-size: 16px;
+}
+
+.review_people,.review_manager{
+    color: #FFFFFF;
+}
+
+.add_people{
+    display: flex;
+}
+
+.right_block_per_review,.right_block_per_people{
+    display: flex;
+    flex: 5;
+    flex-direction: column;
+    margin: 8px;
+}
+
+.left_block_per_review,.left_block_per_people{
     flex: 1;
 }
