--- a/www_data/data/view/project/index.html
+++ b/www_data/data/view/project/index.html
@@ -92,9 +92,25 @@
                                 <div class="people_in_project">
                                     <div class="left_block_people">
                                         <span>Руководители проекта:</span>
+                                        <div class="personal_reviews_managers">
+                                            <div class="add_people">
+                                                <div class="left_block_per_review">
+                                                    <img src="" alt="Avatar" id="avatar_review">
+                                                </div>
+                                                <div class="right_block_per_review"></div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="rigth_block_people">
                                         <span>Команда:</span>
+                                        <div class="personal_reviews_managers">
+                                            <div class="add_people">
+                                                <div class="left_block_per_people">
+                                                    <img src="" alt="Avatar" id="avatar_review">
+                                                </div>
+                                                <div class="right_block_per_people"></div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                         </div>
