--- a/www_data/data/view/project/index.html
+++ b/www_data/data/view/project/index.html
@@ -92,7 +92,7 @@
                                 <div class="people_in_project">
                                     <div class="left_block_people">
                                         <span>Руководители проекта:</span>
-                                        <div class="personal_reviews_managers">
+                                        <div class="personal_people">
                                             <div class="add_people">
                                                 <div class="left_block_per_review">
                                                     <img src="" alt="Avatar" id="avatar_review">
@@ -103,7 +103,7 @@
                                     </div>
                                     <div class="rigth_block_people">
                                         <span>Команда:</span>
-                                        <div class="personal_reviews_managers">
+                                        <div class="personal_people">
                                             <div class="add_people">
                                                 <div class="left_block_per_people">
                                                     <img src="" alt="Avatar" id="avatar_review">
