--- a/www_data/data/view/my_projects/index.html
+++ b/www_data/data/view/my_projects/index.html
@@ -9,6 +9,7 @@
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
     <script src="../../js/jquery.cookie.js"></script>
+    <script src="../../js/projects.js"></script>
     <link rel="stylesheet" href="../my_projects/css/my_projects.css">
     <link rel="stylesheet" href="../../stylesheets/form_projects.css">
     <link rel="stylesheet" href="../../stylesheets/left_main_menu.css">
