--- a/www_data/data/view/project/index.html
+++ b/www_data/data/view/project/index.html
@@ -101,6 +101,7 @@
                                         <div class="personal_people">
                                             
                                         </div>
+                                        <button class="search_members">Подобрать кандидатов</button>
                                     </div>
                                 </div>
                         </div>
