--- a/www_data/data/view/project/css/project.css
+++ b/www_data/data/view/project/css/project.css
@@ -172,3 +172,12 @@
 .left_block_per_review,.left_block_per_people{
     flex: 1;
 }
+
+.search_members{
+    font-size: 20px;
+    background: #FCC400;
+    border-radius: 10px;
+    margin: 1%;
+    margin-bottom: 1%;
+    padding: 5px;
+}
