--- a/www_data/data/view/project/index.html
+++ b/www_data/data/view/project/index.html
@@ -79,6 +79,7 @@
                                     </div>
                                     <div class="blocks resources_mobility">
                                         <span>Мобильность</span>
+                                        <div>2 месяца</div>
                                     </div>
                                     <div class="blocks resources_material">
                                         <span>Материальные</span>
