--- a/www_data/data/view/project/index.html
+++ b/www_data/data/view/project/index.html
@@ -44,7 +44,7 @@
                     <div class="form_information_project">
                         <div class="header_block">
                             <div class="header_block_1">
-                                <span class="style_of_text" id="name_of_project"></span>
+                                <span class="style_of_text" id="name_of_project">TeamMate. сервис для соискателей и владельцев проектов в различных сферах жизни</span>
                             </div>
                             <div class="header_block_2">
                                 <span id="header_progress">В разработке</span>
@@ -52,11 +52,11 @@
                         </div>
                         <div class="information_about_project">
                             <span class="style_of_text" id="about_project">О проекте:</span>
-                                <div class="about_project ">Пусто</div>
+                                <div class="about_project ">Ключевыми элементами сервиса являются: 1) профили кандидатов (описание личных качеств; информацию об интересах, хобби; профессиональные навыки; доступные ресурсы; прошлые и текущие проекты; оценки и отзывы коллег и руководителей) 2) страницы проектов (описание проекта; стек используемых технологий; требования к команде и к ресурсам)</div>
                                 <div class="city_organization_date_success">
-                                    <span id="city">Город: </span>
-                                    <span id="organization">Организация: </span>
-                                    <span id="data_success">Срок: </span>
+                                    <span id="city">Город: Екатеринбург</span>
+                                    <span id="organization">Организация: Урфу</span>
+                                    <span id="data_success">Срок: 30.05.2020</span>
                                 </div>
                                 <div class="attachment">
                                     <div class="technical_task">
